--- a/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GH/Atrazine/2023/Atrazine_Absolute ED/MIs_Atra_GH_A101_DR Percent Bio.Rmd
+++ b/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GH/Atrazine/2023/Atrazine_Absolute ED/MIs_Atra_GH_A101_DR Percent Bio.Rmd
@@ -40,11 +40,11 @@ summary.atra <- summaryBy(cbind(percent_bio) ~ herb + rate, data = subset(data_A
           FUN=fun)
 
 
-summary.atra_GST <- summaryBy(cbind(percent_bio) ~ herb + rate, data = subset(data_A101, herb=="atra+GST"),
+summary.atra_GST <- summaryBy(cbind(percent_bio) ~ herb + rate, data = subset(data_A101, herb=="atra+GSTs"),
           FUN=fun)
 
 
-summary.atra_P450 <- summaryBy(cbind(percent_bio) ~ herb + rate, data = subset(data_A101, herb=="atra+P450"),
+summary.atra_P450 <- summaryBy(cbind(percent_bio) ~ herb + rate, data = subset(data_A101, herb=="atra+P450s"),
           FUN=fun)
 
 
@@ -119,9 +119,9 @@ anova(model.W1.2, model.LL4) # p-value > 0.05 means that there is no difference 
 
 ED50.atra <- ED(model.W1.2, 0.5, clevel = "atra", type = "absolute", interval = "delta")
 
-ED50.atra.P450 <- ED(model.W1.2, 0.5, clevel = "atra+P450", type = "absolute", interval = "delta")
+ED50.atra.P450s <- ED(model.W1.2, 0.5, clevel = "atra+P450s", type = "absolute", interval = "delta")
 
-ED50.atra.GST <- ED(model.W1.2, 0.5, clevel = "atra+GST", type = "absolute", interval = "delta")
+ED50.atra.GSTs <- ED(model.W1.2, 0.5, clevel = "atra+GSTs", type = "absolute", interval = "delta")
 
 
 # In this case, fitting relative and absolute resulted in the same ED50. Perhaps because W1.3 has a lower limit = 0. In simulations using the W1.4, then the relative and absolute ED50 are different. 
@@ -137,11 +137,11 @@ ED50.atra.GST <- ED(model.W1.2, 0.5, clevel = "atra+GST", type = "absolute", int
 
 
 EDcomp(model.W1.2, c(0.5, 0.5), 
-       compMatch = c("atra", "atra+P450"), type = "absolute", interval = "none", reverse = T)
+       compMatch = c("atra", "atra+P450s"), type = "absolute", interval = "none", reverse = T)
 
 
 EDcomp(model.W1.2, c(0.5, 0.5), 
-       compMatch = c("atra", "atra+GST"), type = "absolute", interval = "none", reverse = T)
+       compMatch = c("atra", "atra+GSTs"), type = "absolute", interval = "none", reverse = T)
 
 
 # Comparing b parameter (slope)
@@ -174,7 +174,7 @@ par(mar = c(5,5,1,1))
 plot(model.W1.2,
      type = "average",
      xlab = expression(paste("Atrazine rate (g ai ha"^-1, ")")),
-     ylab = expression(paste("A101 Biomass (x 100%)")),
+     ylab = expression(paste("A101 biomass (x 100%)")),
      ylim = c(0, 1),
      #broken = T,
      col = c("darkgreen", "red", "navy"),
@@ -189,8 +189,8 @@ plot(model.W1.2,
 
 
 points(x = c(ED50.atra[1, 1],
-             ED50.atra.P450[1, 1],
-             ED50.atra.GST[1, 1]),
+             ED50.atra.P450s[1, 1],
+             ED50.atra.GSTs[1, 1]),
        y = c(0.5, 0.5, 0.5),
        pch = 8,
        cex = 1.3)
