--- a/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GH/Fomesafen/Fomesafen_Absolute ED/MIs_Fome_GH_A101_DR Percent Bio.Rmd
+++ b/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GH/Fomesafen/Fomesafen_Absolute ED/MIs_Fome_GH_A101_DR Percent Bio.Rmd
@@ -41,11 +41,11 @@ summary.fome <- summaryBy(cbind(percent_bio) ~ herb + rate, data = subset(data_A
           FUN=fun)
 
 
-summary.fome_GST <- summaryBy(cbind(percent_bio) ~ herb + rate, data = subset(data_A101, herb=="fome+GST"),
+summary.fome_GSTs <- summaryBy(cbind(percent_bio) ~ herb + rate, data = subset(data_A101, herb=="fome+GSTs"),
           FUN=fun)
 
 
-summary.fome_P450 <- summaryBy(cbind(percent_bio) ~ herb + rate, data = subset(data_A101, herb=="fome+P450"),
+summary.fome_P450s <- summaryBy(cbind(percent_bio) ~ herb + rate, data = subset(data_A101, herb=="fome+P450s"),
           FUN=fun)
 
 
@@ -119,9 +119,9 @@ anova(model.W1.2, model.LL4) # p-value > 0.05 means that there is no difference 
 
 ED50.fome <- ED(model.W1.2, 0.5, clevel = "fome", type = "absolute", interval = "delta")
 
-ED50.fome.P450 <- ED(model.W1.2, 0.5, clevel = "fome+P450", type = "absolute", interval = "delta")
+ED50.fome.P450s <- ED(model.W1.2, 0.5, clevel = "fome+P450s", type = "absolute", interval = "delta")
 
-ED50.fome.GST <- ED(model.W1.2, 0.5, clevel = "fome+GST", type = "absolute", interval = "delta")
+ED50.fome.GSTs <- ED(model.W1.2, 0.5, clevel = "fome+GSTs", type = "absolute", interval = "delta")
 
 
 # In this case, fitting relative and absolute resulted in the same ED50. Perhaps because W1.3 has a lower limit = 0. In simulations using the W1.4, then the relative and absolute ED50 are different. 
@@ -137,11 +137,11 @@ ED50.fome.GST <- ED(model.W1.2, 0.5, clevel = "fome+GST", type = "absolute", int
 
 
 EDcomp(model.W1.2, c(0.5, 0.5), 
-       compMatch = c("fome", "fome+P450"), type = "absolute", interval = "none", reverse = T)
+       compMatch = c("fome", "fome+P450s"), type = "absolute", interval = "none", reverse = T)
 
 
 EDcomp(model.W1.2, c(0.5, 0.5), 
-       compMatch = c("fome", "fome+GST"), type = "absolute", interval = "none", reverse = T)
+       compMatch = c("fome", "fome+GSTs"), type = "absolute", interval = "none", reverse = T)
 
 
 # Comparing b parameter (slope)
@@ -171,11 +171,11 @@ tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/PhD
 par(mar = c(5,5,1,1))
 
 
-plot(model.W1.3,
+plot(model.W1.2,
      type = "average",
      xlab = expression(paste("Fomesafen rate (g ai ha"^-1, ")")),
-     ylab = expression(paste("A101 Biomass (%)")),
-     ylim = c(0, 100),
+     ylab = expression(paste("A101 biomass (%)")),
+     ylim = c(0, 1),
      #broken = T,
      col = c("darkgreen", "red", "navy"),
      pch = c(19, 17, 15),
@@ -183,17 +183,15 @@ plot(model.W1.3,
      cex.axis = 1.5,
      cex.lab = 2.0,
      cex.legend = 1.8,
-     legendPos = c(3600, 100),
+     legendPos = c(3600, 1),
      lwd = 1.5)
 
 
 
 points(x = c(ED50.fome[1, 1],
-             ED50.fome.P450[1, 1],
-             ED50.fome.GST[1, 1]),
-       y = c((summary(model.W1.3)$coefficients[4, 1]/2), 
-             (summary(model.W1.3)$coefficients[5, 1]/2),
-             (summary(model.W1.3)$coefficients[6, 1]/2)),
+             ED50.fome.P450s[1, 1],
+             ED50.fome.GSTs[1, 1]),
+       y = c(0.5, 0.5, 0.5),
        pch = 8,
        cex = 1.3)
 
