--- a/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/2,4-D/2023/2,4-D_Absolute ED_Multiple Comparisons/MIs_2,4-D Only_GC_ DR Percent Bio.Rmd
+++ b/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/2,4-D/2023/2,4-D_Absolute ED_Multiple Comparisons/MIs_2,4-D Only_GC_ DR Percent Bio.Rmd
@@ -112,13 +112,13 @@ anova(model.W1.2, model.LL4) # p-value > 0.05 means that there is no difference 
 #ED(model.W1.3, c(50), type = "relative", interval = "delta")
 
 
-ED50.A82.24D.elevated <- ED(model.W1.2, 0.5, clevel = "A82+2,4D+elevated", type = "absolute", interval = "delta")
+ED50.A82.24D.increased <- ED(model.W1.2, 0.5, clevel = "A82+2,4D+increased", type = "absolute", interval = "delta")
 
 ED50.A82.24D.ambient <- ED(model.W1.2, 0.5, clevel = "A82+2,4D+ambient", type = "absolute", interval = "delta")
 
 
 
-ED50.A101.24D.elevated <- ED(model.W1.2, 0.5, clevel = "A101+2,4D+elevated", type = "absolute", interval = "delta")
+ED50.A101.24D.increased <- ED(model.W1.2, 0.5, clevel = "A101+2,4D+increased", type = "absolute", interval = "delta")
 
 ED50.A101.24D.ambient <- ED(model.W1.2, 0.5, clevel = "A101+2,4D+ambient", type = "absolute", interval = "delta")
 
@@ -137,12 +137,12 @@ ED50.A101.24D.ambient <- ED(model.W1.2, 0.5, clevel = "A101+2,4D+ambient", type 
 
 
 EDcomp(model.W1.2, c(0.5, 0.5), 
-       compMatch = c("A82+2,4D+elevated", "A82+2,4D+ambient"), type = "absolute", interval = "none", reverse = T)
+       compMatch = c("A82+2,4D+increased", "A82+2,4D+ambient"), type = "absolute", interval = "none", reverse = T)
 
 
 
 EDcomp(model.W1.2, c(0.5, 0.5), 
-       compMatch = c("A101+2,4D+elevated", "A101+2,4D+ambient"), type = "absolute", interval = "none", reverse = T)
+       compMatch = c("A101+2,4D+increased", "A101+2,4D+ambient"), type = "absolute", interval = "none", reverse = T)
 
 
 
@@ -191,9 +191,9 @@ plot(model.W1.2,
 
 
 
-points(x = c(ED50.A82.24D.elevated [1, 1],
+points(x = c(ED50.A82.24D.increased [1, 1],
              ED50.A82.24D.ambient [1, 1],
-             ED50.A101.24D.elevated [1, 1],
+             ED50.A101.24D.increased [1, 1],
              ED50.A101.24D.ambient [1, 1]),
        y = c(0.5, 0.5, 0.5, 0.5),
        pch = 8,
