--- a/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/2,4-D/2023/2,4-D_Absolute ED_Multiple Comparisons/MIs_2,4-D Only_GC_ DR Percent Bio.Rmd
+++ b/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/2,4-D/2023/2,4-D_Absolute ED_Multiple Comparisons/MIs_2,4-D Only_GC_ DR Percent Bio.Rmd
@@ -177,7 +177,7 @@ par(mar = c(5,5,1,1))
 plot(model.W1.2,
      type = "average",
      xlab = expression(paste("2,4-D rate (g ae ha"^-1, ")")),
-     ylab = expression(paste("Percent biomass (x 100%)")),
+     ylab = expression(paste("Biomass (x 100%)")),
      ylim = c(0, 1),
      col = c("darkgreen", "darkgreen", "red", "red"),
      pch = c(19, 1, 17, 2),
