--- a/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/Glyphosate/Glyphosate_Absolute ED_Multiple Comparisons/MIs_Gly Only_GC_ DR Percent Bio.Rmd
+++ b/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/Glyphosate/Glyphosate_Absolute ED_Multiple Comparisons/MIs_Gly Only_GC_ DR Percent Bio.Rmd
@@ -112,13 +112,13 @@ anova(model.W1.2, model.LL4) # p-value > 0.05 means that there is no difference 
 #ED(model.W1.3, c(50), type = "relative", interval = "delta")
 
 
-ED50.A106.gly.elevated <- ED(model.W1.2, 0.5, clevel = "A106+gly+elevated", type = "absolute", interval = "delta")
+ED50.A106.gly.increased <- ED(model.W1.2, 0.5, clevel = "A106+gly+increased", type = "absolute", interval = "delta")
 
 ED50.A106.gly.ambient <- ED(model.W1.2, 0.5, clevel = "A106+gly+ambient", type = "absolute", interval = "delta")
 
 
 
-ED50.A101.gly.elevated <- ED(model.W1.2, 0.5, clevel = "A101+gly+elevated", type = "absolute", interval = "delta")
+ED50.A101.gly.increased <- ED(model.W1.2, 0.5, clevel = "A101+gly+increased", type = "absolute", interval = "delta")
 
 ED50.A101.gly.ambient <- ED(model.W1.2, 0.5, clevel = "A101+gly+ambient", type = "absolute", interval = "delta")
 
@@ -137,12 +137,12 @@ ED50.A101.gly.ambient <- ED(model.W1.2, 0.5, clevel = "A101+gly+ambient", type =
 
 
 EDcomp(model.W1.2, c(0.5, 0.5), 
-       compMatch = c("A106+gly+elevated", "A106+gly+ambient"), type = "absolute", interval = "none", reverse = T)
+       compMatch = c("A106+gly+increased", "A106+gly+ambient"), type = "absolute", interval = "none", reverse = T)
 
 
 
 EDcomp(model.W1.2, c(0.5, 0.5), 
-       compMatch = c("A101+gly+elevated", "A101+gly+ambient"), type = "absolute", interval = "none", reverse = T)
+       compMatch = c("A101+gly+increased", "A101+gly+ambient"), type = "absolute", interval = "none", reverse = T)
 
 
 
@@ -177,7 +177,7 @@ par(mar = c(5,5,1,1))
 plot(model.W1.2,
      type = "average",
      xlab = expression(paste("Glyphosate rate (g ae ha"^-1, ")")),
-     ylab = expression(paste("Percent biomass (x 100%)")),
+     ylab = expression(paste("Biomass (x 100%)")),
      ylim = c(0, 1),
      col = c("darkgreen", "darkgreen", "red", "red"),
      pch = c(19, 1, 17, 2),
@@ -191,9 +191,9 @@ plot(model.W1.2,
 
 
 
-points(x = c(ED50.A106.gly.elevated [1, 1],
+points(x = c(ED50.A106.gly.increased [1, 1],
              ED50.A106.gly.ambient [1, 1],
-             ED50.A101.gly.elevated [1, 1],
+             ED50.A101.gly.increased [1, 1],
              ED50.A101.gly.ambient [1, 1]),
        y = c(0.5, 0.5, 0.5, 0.5),
        pch = 8,
