--- a/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GH/Fomesafen/Fomesafen_Absolute ED/MIs_Fome_GH_A101_DR Percent Bio.Rmd
+++ b/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GH/Fomesafen/Fomesafen_Absolute ED/MIs_Fome_GH_A101_DR Percent Bio.Rmd
@@ -41,11 +41,11 @@ summary.fome <- summaryBy(cbind(percent_bio) ~ herb + rate, data = subset(data_A
           FUN=fun)
 
 
-summary.fome_GSTs <- summaryBy(cbind(percent_bio) ~ herb + rate, data = subset(data_A101, herb=="fome+GSTs"),
+summary.fome_GSTs <- summaryBy(cbind(percent_bio) ~ herb + rate, data = subset(data_A101, herb=="fome+GST"),
           FUN=fun)
 
 
-summary.fome_P450s <- summaryBy(cbind(percent_bio) ~ herb + rate, data = subset(data_A101, herb=="fome+P450s"),
+summary.fome_P450s <- summaryBy(cbind(percent_bio) ~ herb + rate, data = subset(data_A101, herb=="fome+P450"),
           FUN=fun)
 
 
@@ -119,9 +119,9 @@ anova(model.W1.2, model.LL4) # p-value > 0.05 means that there is no difference 
 
 ED50.fome <- ED(model.W1.2, 0.5, clevel = "fome", type = "absolute", interval = "delta")
 
-ED50.fome.P450s <- ED(model.W1.2, 0.5, clevel = "fome+P450s", type = "absolute", interval = "delta")
+ED50.fome.P450s <- ED(model.W1.2, 0.5, clevel = "fome+P450", type = "absolute", interval = "delta")
 
-ED50.fome.GSTs <- ED(model.W1.2, 0.5, clevel = "fome+GSTs", type = "absolute", interval = "delta")
+ED50.fome.GSTs <- ED(model.W1.2, 0.5, clevel = "fome+GST", type = "absolute", interval = "delta")
 
 
 # In this case, fitting relative and absolute resulted in the same ED50. Perhaps because W1.3 has a lower limit = 0. In simulations using the W1.4, then the relative and absolute ED50 are different. 
@@ -137,11 +137,11 @@ ED50.fome.GSTs <- ED(model.W1.2, 0.5, clevel = "fome+GSTs", type = "absolute", i
 
 
 EDcomp(model.W1.2, c(0.5, 0.5), 
-       compMatch = c("fome", "fome+P450s"), type = "absolute", interval = "none", reverse = T)
+       compMatch = c("fome", "fome+P450"), type = "absolute", interval = "none", reverse = T)
 
 
 EDcomp(model.W1.2, c(0.5, 0.5), 
-       compMatch = c("fome", "fome+GSTs"), type = "absolute", interval = "none", reverse = T)
+       compMatch = c("fome", "fome+GST"), type = "absolute", interval = "none", reverse = T)
 
 
 # Comparing b parameter (slope)
@@ -164,7 +164,7 @@ compParm(model.W1.2, strVal = "e", operator = "-") # Remember that for assymetri
 
 ```{r}
 
-tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GH/Fomesafen/Fomesafen_Absolute ED/MIs_Fome_GH_A101_DR Percent Bio.tiff",
+tiff(file="C:/Users/felip/OneDrive/Documents/GitHub/FFaleco/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GH/Fomesafen/Fomesafen_Absolute ED/MIs_Fome_GH_A101_DR Percent Bio.tiff",
      width = 10, height = 8, units = "in", res = 600, compression = "lzw")
 
 
